# SparDial

./: .clang-format  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  pyproject.toml  test_import.py  test_linalg.py
.claude/skills/ask-codex/: SKILL.md
.claude/skills/ask-mlir-docs/: SKILL.md
.claude/skills/mlir-docs/: SKILL.md
benchmarks/: CMakeLists.txt  README.md  __init__.py  __main__.py
benchmarks/framework/: __init__.py  benchmark_base.py  numpy_sparse_utils.py  reporter.py  sparse_utils.py
benchmarks/kernels/: __init__.py  bench_add.py  bench_numpy_spmm.py  bench_numpy_spmv.py  bench_spmm.py  bench_spmv.py
docs/: numpy_tracing_spmv_plan.md  sparse_encoding_mechanism.md
include/: CMakeLists.txt
include/spardial-c/: Registration.h
include/spardial/Transforms/: CMakeLists.txt  Passes.h  Passes.td
include/spardial/Transforms/Sparsity/: SparseEncodingPropagate.h
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Registration.cpp
lib/Transforms/: CMakeLists.txt  Passes.cpp
lib/Transforms/Sparsity/: CMakeLists.txt  SparseEncodingPropagate.cpp
python/: CMakeLists.txt  SparDialModule.cpp
python/spardial/: CMakeLists.txt  __init__.py  backend.py  importer.py  jit_runtime.py  models.py  pipeline.py
python/spardial/models/: __init__.py  gat.py  gcn.py  kernels.py  lif.py
python/spardial/numpy_backend/: __init__.py  api.py  compiler.py  input_spec.py  kernel_builder.py  sparse_adapter.py  sparse_encoding.py  tracer.py
test/: test_pipeline.py  test_sparse_direct.py
tests/: CMakeLists.txt  conftest.py  lit.cfg.py  lit.site.cfg.py.in  test_sparse_direct.py
tests/models/: add.py  gat.py  gcn.py  lif.py  mm.py  mul.py  norm.py  sddmm.py  sparse_formats.py  spmv.py
tests/numpy/: test_spmm.py  test_spmv.py
tests/pipeline/: linalg_lowering.py  sparse_csr_import.py  sparse_encoding_pass.py  sparsification.py  torch_import.py
